# ledman

./: CMakeLists.txt  README.md
src/: client.hpp  server.hpp
src/internal/base/: common.hpp  ledmanager.hpp
src/internal/logging/: logger.hpp
src/internal/network/: client_impl.hpp  server_impl.hpp
src/internal/network/common/: acceptor.hpp  connector.hpp  speaker.hpp
tests/manual/: client.cpp  server.cpp
